test/depCond2.slq

def foo(a:ğ”¹,const cond:ğ”¹,const cond2:ğ”¹){
	x:=!a;
	y:=!x;
	if cond{
		x:=H(x);
	}else{
		a:=H(a);
	}
	__show(__query("dep",y)); // âŠ¤
	forget(y); /// error
	return (a,x);
}
